--- a/.gitignore
+++ b/.gitignore
@@ -135,7 +135,7 @@ dist
 ### Node Patch ###
 # Serverless Webpack directories
 .webpack/
-
+build
 # Optional stylelint cache
 
 # SvelteKit build / generate output
