--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon ./build/app.js",
     "dev": "nodemon -r tsconfig-paths/register src/app.ts | ./node_modules/.bin/bunyan",
     "lint:check": "eslint 'src/**/*.ts'",
     "lint:fix": "eslint 'src/**/*.ts' --fix",
     "prettier:check": "prettier --check 'src/**/*.{ts,json}'",
-    "prettier:fix": "prettier --write 'src/**/*.{ts,json}'"
+    "prettier:fix": "prettier --write 'src/**/*.{ts,json}'",
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json"
   },
   "author": "",
   "license": "ISC",
@@ -26,7 +28,8 @@
     "mongoose": "^8.3.2",
     "redis": "^4.6.13",
     "socket.io": "^4.7.5",
-    "socket.io-redis-adapter": "^8.4.6"
+    "socket.io-redis-adapter": "^8.4.6",
+    "typescript-transform-paths": "^3.4.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
@@ -43,6 +46,7 @@
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
