--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/express": "^5.16.0",
+    "@bull-board/ui": "^5.16.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.12.2",
     "bunyan": "^1.8.15",
     "compression": "^1.7.4",
     "cookie-session": "^2.1.0",
@@ -38,6 +41,7 @@
   "devDependencies": {
     "@eslint/js": "^9.1.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/bull": "^4.10.0",
     "@types/bunyan": "^1.8.11",
     "@types/compression": "^1.7.5",
     "@types/cookie-session": "^2.0.49",
