--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,12 +24,13 @@
       {"transform": "typescript-transform-paths","afterDeclarations": true},
     ],
     "paths": {
-      "@auth/*":["src/features/auth/*"],
-      "@global/*":["src/shared/globals/*"],
-      "@service/*":["src/shared/services/*"],
-      "@socket/*":["src/shared/sockets/*"],
-      "@worker/*":["src/shared/workers/*"],
-      "@root/*":["src/*"],
+      "@auth/*": ["src/features/auth/*"],
+      "@user/*": ["src/features/user/*"],
+      "@global/*": ["src/shared/globals/*"],
+      "@service/*": ["src/shared/services/*"],
+      "@socket/*": ["src/shared/sockets/*"],
+      "@worker/*": ["src/shared/workers/*"],
+      "@root/*": ["src/*"]
     }
   }
 }
