--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.2",
     "bunyan": "^1.8.15",
+    "cloudinary": "^2.2.0",
     "compression": "^1.7.4",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
